# 1.6.3
  - Fix typespec of message's json_decode! function

# 1.6.2
  - Fix possible double compilation of Empty well-known type
  - Fix dependency on protoc for generated code

# 1.6.1
  - Fix compilation when protoc does not include well-known types

# 1.6.0
  - Add support of JSON protobuf encoding and decoding (https://developers.google.com/protocol-buffers/docs/proto3#json), with support of well-known types (except for Any)
  - More accurate error reporting
  - Fix decoding of fixed32 and fixed64 values (detected using JSON conformance tests)
  - Deprecate Protox.Encode.encode/1 and Protox.Encode.encode!/1; use Protox.encode/1 and Protox.encode!/1 instead
  - Deprecate generated defs()/0 and defs_by_name()/0
  - Internal refactoring to hopefully make things more explicit (based on a initial work by https://github.com/sneako)

# 1.5.1
  - Fix handling of multiple import paths (thanks to https://github.com/zolakeith)

# 1.5.0
  - Allow multiple import paths (thanks to https://github.com/cheng81)

* 1.4.0
  - Add support of proto3 optional fields (thanks to https://github.com/sneako)

* 1.3.2
  - Bump version to build doc using ex_doc 0.24

* 1.3.1
  - Fix table of types mapping in documentation

* 1.3.0
  - Allow namespaces through protox.generate (thanks to https://github.com/sdrew)
  - Expand output path when generating files
  - More thorough testing of code generation

* 1.2.4
  - Fix warning when compiling generated code (thanks to https://github.com/xinz)
  - Format generated code
  - Fix warning about unused variable in generated code when encoding an empty protobuf message

* 1.2.3
  - Update documentation to better explain the package directive usage

* 1.2.2
  - Enable listing of task protox.generate via mix help.

* 1.2.1
  - Add --keep-unknown-fields option to configure support of unknown fields when generating files

* 1.2.0
  - Add keep_unknown_fields option to configure support of unknown fields

* 1.1.1
  - Fix documentation links

* 1.1.0